# rtail

./: .gitignore  .project_alt.json  Cargo.toml  build.rs  test_case.txt
proto/: collector.proto
src/: main.rs  watch.rs
src/analyzer/: common.rs  frame.rs  main.rs  service.rs
src/collector/: main.rs
src/server/: codec.rs  common.rs  conn.rs  main.rs  transport.rs
test/: test_case.txt
