[package]
name = "rtail"
version = "0.1.0"
authors = ["广泽 <guangzefrio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.7"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
bytes = "1.0.1"
log = "0.4"
rand = "0.8.3"
memchr = "2.3.4"
futures = "0.3.2"
async-trait = "0.1.42"
lazy_static = "1.4.0"
inotify = "0.9.2"