[package]
name = "rtail"
version = "0.1.0"
authors = ["广泽 <guangzefrio@gmail.com>"]
edition = "2018"

#[[bin]]
#name = "collector"
#path = "src/collector/main.rs"
#
#[[bin]]
#name = "analyzer"
#path = "src/analyzer/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.7"
tokio = { version = "1.4", features = ["full"] }
toml = "0.5.8"
bytes = "1.0.1"
log = "0.4"
rand = "0.8.3"
memchr = "2.3.4"
futures = "0.3.2"
async-trait = "0.1.42"
lazy_static = "1.4.0"
notify = "4.0.15"
walkdir = "2"
regex = "1"
prost = "0.7"
futures-util = "0.3"
env_logger = "0.8"
tokio-util = { version = "0.6.7", features = ["full"]}

